--- a/Jupyter_Notebook (1).ipynb
+++ b/Jupyter_Notebook (1).ipynb
@@ -73,8 +73,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f2c1f19e-4e63-45a4-9456-fc741d5a7d7a",
+   "metadata": {},
+   "source": [
+    "<s>This sentence is to be struck out.</s>   <ol>blue yellow red</ol>    <hr>Horizontal rule is above</hr>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5851698f-d85e-4e29-b2ef-39972a218421",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -82,9 +91,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-python-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -96,9 +105,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 5
 }
