--- a/Jupyter_Notebook (1).ipynb
+++ b/Jupyter_Notebook (1).ipynb
@@ -22,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "My Jupyter Notebook on IBM Watson Studio"
+    "<h1>My Jupyter Notebook on IBM Watson Studio</h1>"
    ]
   },
   {
@@ -77,7 +77,7 @@
    "id": "f2c1f19e-4e63-45a4-9456-fc741d5a7d7a",
    "metadata": {},
    "source": [
-    "<s>This sentence is to be struck out.</s>   <ol>blue yellow red</ol>    <hr>Horizontal rule is above</hr>"
+    "<s>This sentence must be crossed out.</s>   <ol>Head Neck Arms</ol>    <hr>Horizontal rule is above</hr>"
    ]
   },
   {
