--- a/Jupyter_Notebook (1).ipynb
+++ b/Jupyter_Notebook (1).ipynb
@@ -2,67 +2,60 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "98fa1bbf-4b3e-4cf8-b18c-356b7d2be402",
    "metadata": {},
-   "source": [
-    "<center>\n",
-    "    <img src=\"https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-DS0105EN-SkillsNetwork/labs/Module2/images/SN_web_lightmode.png\" width=\"300\" alt=\"cognitiveclass.ai logo\"  />\n",
-    "</center>\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Add your code below following the instructions given in the course\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "<h1>My Jupyter Notebook on IBM Watson Studio</h1>"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
+   "id": "5fe26c89-5abd-4dca-b416-0d0a0ca9bea3",
    "metadata": {},
-   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42d0e9ae-06ab-4e85-a143-04ef6c697c25",
+   "metadata": {},
    "source": [
-    "Name: Elvyn Tavarez"
+    "<b>John W. Luton</b>\n",
+    "\n",
+    "Data Analyst \n",
+    " "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
+   "id": "9c704404-0fdc-4420-b40e-0a50f7d2e322",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "More than interest, I like data management, I am passionate about everything that has to do with data science."
+    "<i>I am interested in Data Science because I often wonder about how things work. I also want to be able to teach Data Science.</i> "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
+   "id": "57cc87e3-8cae-492f-83a8-9902c2fe255e",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "My code consists of a mathematical operation with two operators, addition and multiplication, then it prints the result."
+    "<h3>The code in the cell below will compute the product of two factors.</h3>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "4ccde8da-c4a6-40bd-88be-cf7beb9459ea",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "45\n"
-     ]
+     "data": {
+      "text/plain": [
+       "144"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
