--- a/Jupyter_Notebook (1).ipynb
+++ b/Jupyter_Notebook (1).ipynb
@@ -19,9 +19,9 @@
    "id": "42d0e9ae-06ab-4e85-a143-04ef6c697c25",
    "metadata": {},
    "source": [
-    "<b>John W. Luton</b>\n",
+    "<b>Elvyn Tavarez</b>\n",
     "\n",
-    "Data Analyst \n",
+    "Data scientist\n",
     " "
    ]
   },
