--- a/Jupyter_Notebook (1).ipynb
+++ b/Jupyter_Notebook (1).ipynb
@@ -30,7 +30,7 @@
    "id": "9c704404-0fdc-4420-b40e-0a50f7d2e322",
    "metadata": {},
    "source": [
-    "<i>I am interested in Data Science because I often wonder about how things work. I also want to be able to teach Data Science.</i> "
+    "<i>More than interest, I like data management, I am passionate about everything that has to do with data science..</i> "
    ]
   },
   {
