--- a/Jupyter_Notebook (1).ipynb
+++ b/Jupyter_Notebook (1).ipynb
@@ -19,9 +19,9 @@
    "id": "42d0e9ae-06ab-4e85-a143-04ef6c697c25",
    "metadata": {},
    "source": [
-    "<b>Elvyn Tavarez</b>\n",
+    "<b>John W. Luton</b>\n",
     "\n",
-    "Data scientist\n",
+    "Data Analyst \n",
     " "
    ]
   },
@@ -30,21 +30,32 @@
    "id": "9c704404-0fdc-4420-b40e-0a50f7d2e322",
    "metadata": {},
    "source": [
-    "<i>More than interest, I like data management, I am passionate about everything that has to do with data science..</i> "
+    "<i>I am interested in Data Science because I often wonder about how things work. I also want to be able to teach Data Science.</i> "
    ]
-     ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57cc87e3-8cae-492f-83a8-9902c2fe255e",
+   "metadata": {},
+   "source": [
+    "<h3>The code in the cell below will compute the product of two factors.</h3>"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "4ccde8da-c4a6-40bd-88be-cf7beb9459ea",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "45\n"
-     ]
+     "data": {
+      "text/plain": [
+       "144"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
