--- a/Jupyter_Notebook (1).ipynb
+++ b/Jupyter_Notebook (1).ipynb
@@ -38,7 +38,7 @@
    "id": "57cc87e3-8cae-492f-83a8-9902c2fe255e",
    "metadata": {},
    "source": [
-    "<h3>The code in the cell below will compute the product of two factors.</h3>"
+    "<h3>My code consists of a mathematical operation with two operators, addition and multiplication, then it prints the result.</h3>"
    ]
   },
   {
